k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-app
  name: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  strategy: {}
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - image: pisckitama/python-app:v1.0.0
        name: python-app
        ports:
        - containerPort: 5000
        resources: {}
